# Neural_Network_CPP

./: CMakeLists.txt  LICENSE  Makefile  Neuron.cpp  README.md  saveme.txt
Debug/: CMakeCache.txt  Makefile  Neural__Network_CPP  cmake_install.cmake
Experiment_results/: Manual-Execution-Guide.txt  all-reports.txt
Experiment_results/O1-Not-Vectorized/: O1-no-vec  report.txt
Experiment_results/O1-Vectorized/with-gprof-flag/: O1-Vec  gmon.out  report.txt
Experiment_results/O1-Vectorized/without-gprof-flag/: O1-vec-no-gprof  report.txt
Experiment_results/O2-Not-Vectorized/: O2-no-vec  report.txt
Experiment_results/O2-Vectorized/: O2-Vec  report.txt
Experiment_results/O3-Not-Vectorized/: O3-no-vec  report.txt
Experiment_results/O3-Vectorized/: O3-Vec  report.txt
Experiment_results/OpenMP/: O1-omp-12threads  O1-omp-4threads  O1-omp-8threads  O1-omp-no-vec-12threads  O1-omp.txt  O2-omp-12threads  O2-omp-no-vec-12threads  O2-omp.txt  O3-omp-12threads  O3-omp.txt
Release/: CMakeCache.txt  Makefile  Neural_Network_CPP  Neural__Network_CPP  O3-omp-no-vec-12threads  cmake_install.cmake
headers/: Net.cpp  Net.h  Neuron.cpp  Neuron.h
include/: Connection.h  Neuron.h  dataset.h
source/: Net.cpp  Neuron.cpp
src/: Net.cpp  Neuron.cpp  dataset.cpp  hello.cpp  main  main.cpp
